fix: Table - not centered style fixes

--- a/client/src/components/Utils/Table/Table.module.scss
+++ b/client/src/components/Utils/Table/Table.module.scss
@@ -75,6 +75,10 @@
     }
   }
 
+  .headerCellLeft {
+    padding: 0 4px;
+  }
+
   .headerCellCenter {
     justify-content: center;
   }
